syntax = "proto3";

import "crossplane/yandex.proto";
import "google/protobuf/duration.proto";
import "validate/validate.proto";

option go_package = "github.com/stroppy-io/stroppy-cloud-panel/backend/proto/panel";

message Ref {
    string namespace = 1 [(validate.rules).string.min_len = 1];
    string name = 2 [(validate.rules).string.min_len = 1];
}

message Resource {
    message Spec {
        enum DeletionPolicy {
            DELETION_POLICY_UNSPECIFIED = 0;
            DELETE = 1;
            ORPHAN = 2;
        }
        Ref write_connection_secret_to_ref = 1 [(validate.rules).message.required = true];
        DeletionPolicy deletion_policy = 2 [(validate.rules).enum.defined_only = true];
        map<string, string> provider_config_ref = 3;
        oneof for_provider {
            YandexCloud.Vm yandex_cloud_vm = 100 [(validate.rules).message.required = true];
            YandexCloud.Network yandex_cloud_network = 101 [(validate.rules).message.required = true];
            YandexCloud.Subnet yandex_cloud_subnet = 102 [(validate.rules).message.required = true];
        }
    }
    string api_version = 2 [(validate.rules).message.required = true];
    string kind = 1 [(validate.rules).message.required = true];
    map<string, string> metadata = 3;
    Spec spec = 4 [(validate.rules).message.required = true];
}

message ResourceWithStatus {
    Ref ref = 1 [(validate.rules).message.required = true];
    Resource resource = 2 [(validate.rules).message.required = true];
    string resource_yaml = 3 [(validate.rules).string.min_len = 1];
    bool synced = 4;
    bool ready = 5;
    optional string external_id = 6 [(validate.rules).string.min_len = 1];
    optional google.protobuf.Duration age = 7;
    map<string, string> additional_fields = 8;
}